force-app/main/default/objects/Work_Order__c/Work_Order__c.object-meta.xml
<CustomObject>
    <description>A maintenance work order mirrored read-only from Yardi. Salesforce never writes back except the Delay Reason flag.</description>
    <label>Work Order</label>
    <nameField>
        <displayFormat>WO-{0000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>