force-app/main/default/objects/Work_Order__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Refrigeration</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Doors &amp; Locks</fullName>
            </value>
            <value>
                <fullName>Landscaping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>