force-app/main/default/objects/Work_Order__c/fields/Completed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Completed_DateTime__c</fullName>
    <description>When the work order reached Completed or Closed. Stamped automatically by the Work Order Touch Sync before-save flow the first time Status becomes Completed or Closed; feeds Hours_Open__c and Resolution_Days__c. Replaces Completed_Date__c, whose _Date suffix asserted a date-only type it never had - this field stores date AND time, per ARCHITECTURE.md §1 rule 9.</description>
    <inlineHelpText>Date AND time the work is finished. Stamped automatically when Status first becomes Completed or Closed - do not set it by hand; resolution time is measured from Reported DateTime to this value.</inlineHelpText>
    <label>Completed DateTime</label>
    <type>DateTime</type>
</CustomField>