force-app/main/default/objects/Work_Order__c/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <description>Salesforce-only flag for WHY this is stuck. Never written back to Yardi.</description>
    <label>Reason for Delay</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>—</fullName>
                <default>true</default>
                <label>—</label>
            </value>
            <value>
                <fullName>Vendor delay</fullName>
            </value>
            <value>
                <fullName>Tenant unresponsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>