force-app/main/default/objects/Work_Order__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The tenant&apos;s own words describing the problem.</description>
    <label>Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>