force-app/main/default/objects/Work_Order__c/fields/First_Touched_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Touched_Date__c</fullName>
    <description>When someone first acted on this work order. Blank means Untouched.</description>
    <label>First Touched</label>
    <type>DateTime</type>
</CustomField>