force-app/main/default/objects/Work_Order__c/fields/Hours_Open__c.field-meta.xml
<CustomField>
    <fullName>Hours_Open__c</fullName>
    <formula>IF(OR(ISPICKVAL(Status__c, &quot;Completed&quot;), ISPICKVAL(Status__c, &quot;Closed&quot;)), IF(ISBLANK(Completed_DateTime__c), 0, (Completed_DateTime__c - Reported_DateTime__c) * 24), (NOW() - Reported_DateTime__c) * 24)</formula>
    <label>Hours Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>