force-app/main/default/objects/Work_Order__c/fields/Is_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Is_Escalation__c</fullName>
    <description>A breached, still-open Critical or High work order — surfaces on the Escalations view.</description>
    <formula>AND(SLA_Breached__c, OR(ISPICKVAL(Priority__c, "Critical"), ISPICKVAL(Priority__c, "High")))</formula>
    <label>Is Escalation</label>
    <type>Checkbox</type>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>