force-app/main/default/objects/Work_Order__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <formula>NOT(OR(ISPICKVAL(Status__c, "Completed"), ISPICKVAL(Status__c, "Closed")))</formula>
    <label>Is Open</label>
    <type>Checkbox</type>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>