force-app/main/default/objects/Work_Order__c/fields/Is_Untouched__c.field-meta.xml
<CustomField>
    <fullName>Is_Untouched__c</fullName>
    <formula>AND(Is_Open__c, ISBLANK(First_Touched_DateTime__c))</formula>
    <label>Untouched</label>
    <type>Checkbox</type>
</CustomField>