force-app/main/default/objects/Work_Order__c/fields/Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Owned_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>