force-app/main/default/objects/Work_Order__c/fields/Property_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Property_Display_Name__c</fullName>
    <description>Property name spanned from the linked Property Asset for lists and reports.</description>
    <formula>Property_Asset__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Property Name</label>
    <type>Text</type>
</CustomField>