force-app/main/default/objects/Work_Order__c/fields/Reported_Date__c.field-meta.xml
<CustomField>
    <fullName>Reported_Date__c</fullName>
    <description>When the work order was reported/synced from Yardi. Anchors all SLA math (used instead of CreatedDate so seed offsets are deterministic).</description>
    <label>Reported Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>