force-app/main/default/objects/Work_Order__c/fields/Reported_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reported_DateTime__c</fullName>
    <description>When the work order was reported/synced from Yardi. Anchors all SLA math (used instead of CreatedDate so seed offsets are deterministic). Replaces Reported_Date__c, whose _Date suffix asserted a date-only type it never had - this field stores date AND time, per ARCHITECTURE.md §1 rule 9. MIGRATION: optional only while Reported_Date__c still exists; both are written in parallel until the backfill completes, after which this field becomes required and Reported_Date__c is retired.</description>
    <inlineHelpText>Date AND time the work order was reported in Yardi. Every SLA calculation counts forward from this moment, so a wrong value silently re-tiers the work order's SLA health.</inlineHelpText>
    <label>Reported DateTime</label>
    <type>DateTime</type>
</CustomField>