force-app/main/default/objects/Work_Order__c/fields/Resolution_Days__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Days__c</fullName>
    <formula>Completed_Date__c - Reported_Date__c</formula>
    <label>Resolution Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>