force-app/main/default/objects/Work_Order__c/fields/SLA_Breached__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breached__c</fullName>
    <formula>AND(Is_Open__c, NOW() &gt; SLA_Due_Date__c)</formula>
    <label>SLA Breached</label>
    <type>Checkbox</type>
</CustomField>