force-app/main/default/objects/Work_Order__c/fields/SLA_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_Date__c</fullName>
    <formula>Reported_Date__c + (SLA_Target_Hours__c / 24)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>SLA Due</label>
    <type>DateTime</type>
</CustomField>