force-app/main/default/objects/Work_Order__c/fields/SLA_Due_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SLA_Due_DateTime__c</fullName>
    <description>When the SLA window closes for this work order: Reported DateTime plus the priority-based SLA Target Hours. Formula twin of SLA_Due_Date__c that reads Reported_DateTime__c instead of Reported_Date__c; the old field is retired in the §1 rule 9 DateTime bundle because its _Date suffix asserted a date-only type it never had. Drives SLA_Breached__c and SLA_Health__c.</description>
    <inlineHelpText>Date AND time the SLA is due (Reported DateTime + SLA Target Hours). Calculated automatically - the SLA badge turns Breached once the current time passes this value.</inlineHelpText>
    <formula>Reported_DateTime__c + (SLA_Target_Hours__c / 24)</formula>
    <label>SLA Due DateTime</label>
    <type>DateTime</type>
</CustomField>