force-app/main/default/objects/Work_Order__c/fields/SLA_Target_Hours__c.field-meta.xml
<CustomField>
    <fullName>SLA_Target_Hours__c</fullName>
    <description>SLA window in hours by priority: Critical 24, High 48, Medium 168, Low 360.</description>
    <formula>CASE(TEXT(Priority__c), "Critical", 24, "High", 48, "Medium", 168, "Low", 360, 168)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>SLA Target (Hours)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>