force-app/main/default/objects/Work_Order__c/fields/Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Name__c</fullName>
    <label>Tenant</label>
    <length>120</length>
    <type>Text</type>
</CustomField>