force-app/main/default/objects/Work_Order__c/fields/Untouched__c.field-meta.xml
<CustomField>
    <fullName>Untouched__c</fullName>
    <formula>AND(Is_Open__c, ISBLANK(First_Touched_Date__c))</formula>
    <label>Untouched</label>
    <type>Checkbox</type>
</CustomField>