force-app/main/default/objects/Work_Order__c/listViews/Breached_SLA.listView-meta.xml
<ListView>
    <fullName>Breached_SLA</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Property_Display_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Hours_Open__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SLA_Breached__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Breached SLA</label>
</ListView>