force-app/main/default/objects/Work_Order__c/listViews/Escalations.listView-meta.xml
<ListView>
    <fullName>Escalations</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Property_Display_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>SLA_Health__c</columns>
    <columns>Hours_Open__c</columns>
    <filters>
        <field>Is_Escalation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Escalations</label>
</ListView>