force-app/main/default/objects/Work_Order__c/listViews/My_Open_Work_Orders.listView-meta.xml
<ListView>
    <fullName>My_Open_Work_Orders</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Property_Display_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>SLA_Health__c</columns>
    <columns>Hours_Open__c</columns>
    <columns>Owner_User__c</columns>
    <filters>
        <field>Is_Open__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>My Open Work Orders</label>
</ListView>