force-app/main/default/objects/Work_Order__c/listViews/Untouched.listView-meta.xml
<ListView>
    <fullName>Untouched</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Property_Display_Name__c</columns>
    <columns>Priority__c</columns>
    <columns>Reported_DateTime__c</columns>
    <columns>SLA_Health__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Untouched__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Untouched</label>
</ListView>